# ContextSend

./: .gitignore
.github/workflows/: ci.yml  release.yml
contextsend/: .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
contextsend/.cargo/: config.toml
contextsend/crates/adapters/: Cargo.toml
contextsend/crates/adapters/src/: chatbox.rs  config.rs  jan.rs  lib.rs  matching.rs
contextsend/crates/adapters/tests/: chatbox_live.rs
contextsend/crates/core/: Cargo.toml
contextsend/crates/core/src/: lib.rs  message.rs  openai.rs
contextsend/crates/network/: Cargo.toml
contextsend/crates/network/src/: crypto.rs  discovery.rs  identity.rs  lib.rs  naming.rs  pairing.rs  service.rs  wire.rs
contextsend/examples/: lang-icons-showcase.json  math-showcase.json  mermaid-fold-showcase.json  richtext-conversation.json
contextsend/scripts/: sync-version.mjs
contextsend/src/: App.vue  main.ts  styles.css
contextsend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
contextsend/src-tauri/capabilities/: default.json
contextsend/src-tauri/icons/: icon.icns
contextsend/src-tauri/src/: commands.rs  lib.rs  main.rs  shortcut.rs  tray.rs
contextsend/src/components/: AppSidebar.vue  BottomTabBar.vue  DevicePanel.vue  IncomingRequestView.vue  MarkdownContent.vue  ReceivePanel.vue  SegmentItem.vue  SettingsPanel.vue  SplitButton.vue  TitleBar.vue  ToastHost.vue  TroubleshootingPanel.vue
contextsend/src/components/settings/: AboutSection.vue  AdapterDetailSettings.vue  AdapterSettings.vue  AdvancedSettings.vue  GeneralSettings.vue  LanguageSettings.vue  SettingComboBox.vue  SettingNumber.vue  SettingRow.vue  SettingSelect.vue  SettingToggle.vue  SettingsSection.vue  ShortcutInput.vue
contextsend/src/composables/: useContextCapture.ts  useLangIcon.ts  useLayout.ts  useMarkdown.ts  useNavItems.ts
contextsend/src/constants/: app.ts  index.ts  settings.ts  tauri.ts  ui.ts
contextsend/src/i18n/: en-US.ts  index.ts  zh-CN.ts
contextsend/src/stores/: app.ts  settings.ts  toast.ts  types.ts
contextsend/src/stores/modules/: useAdapters.ts  useDevices.ts  usePairing.ts  usePermissions.ts  useSegments.ts
contextsend/src/utils/: conversationExport.ts  nameGenerator.ts  nameValidation.ts  sanitizeSnippet.ts  tauriStore.ts
resources/: count-lines.ps1  dev-a.bat  dev-b.bat  kill-contextsend.bat
