[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/adapters",
    "crates/network",
    "src-tauri",
]

# 各 crate 共享的元信息与依赖版本，统一在此处声明，子 crate 用 `.workspace = true` 引用。
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["ContextSend Contributors"]
repository = "https://github.com/zouxiaofei/ContextSend"

[workspace.dependencies]
# 内部 crate
cs-core = { path = "crates/core" }
cs-adapters = { path = "crates/adapters" }
cs-network = { path = "crates/network" }

# 第三方
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# 网络层（Phase 1）
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "io-util", "macros", "time"] }
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
x25519-dalek = "2"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# 开发迭代：优先编译/链接速度。
[profile.dev]
# full debuginfo 在 Windows 上拖慢链接；行号表足够日常调试与 panic 定位。
debug = "line-tables-only"

# 依赖只编译一次即缓存复用，给它们开 opt-level 不影响日常增量编译，
# 却能让 tauri dev 下的 app 运行更顺（仅首次 / 依赖更新时的 clean build 略慢）。
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# 体积优先（目标安装包 <30MB）—— 正式发布用，编译最慢。
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# 本地打包验证用：thin LTO + 多 codegen-units，编译快得多，体积略大于正式包。
# 用法：tauri build --profile release-fast
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
