[package]
name = "cs-network"
description = "ContextSend 网络层：mDNS 发现、配对、AES-GCM 加密传输"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

tokio.workspace = true
mdns-sd.workspace = true
uuid.workspace = true
rand.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets"] }
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "io-util", "macros", "time"] }
